<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    android:clipToPadding="true">

    <TextView
        android:id="@+id/t_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/find_crimestats"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edt_streetName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/t_default"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/street_hint"
        android:inputType="text"
        android:autofillHints="" />

    <Button
        android:id="@+id/b_find_crimes_by_street"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edt_streetName"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/find_crimes_by_street" />

    <EditText
        android:id="@+id/edt_buildingName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/b_find_crimes_by_street"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/building_prompt"
        android:inputType="text"
        android:autofillHints="" />

    <Button
        android:id="@+id/b_find_crimes_by_building"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edt_buildingName"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/find_crimes_by_building" />

    <EditText
        android:id="@+id/edt_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/b_find_crimes_by_building"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/time_prompt"
        android:inputType="text"
        android:autofillHints="" />

    <Button
        android:id="@+id/b_find_crimes_by_time"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edt_time"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/find_crimes_by_time" />

    <TextView
        android:id="@+id/report_view"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_below="@id/b_find_crimes_by_time"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:background="#e8e1f5"
        android:text="@string/report_temp_text"/>

</RelativeLayout>