<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    android:clipToPadding="true">
    <TextView
        android:id="@+id/t_default"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/welcome_msg"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed"
        android:textSize="30sp" />
    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/t_default"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/your_name"
        android:inputType="text"
        android:autofillHints="" />
    <EditText
        android:id="@+id/edt_userID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_username"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/asu_id"
        android:inputType="text"
        android:autofillHints="" />
    <Button
        android:id="@+id/b_login"
        android:layout_centerInParent="true"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/edt_userID"
        android:layout_marginTop="10dp"
        android:text="@string/login" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b_login"
        android:src="@drawable/asu_logo"
        android:contentDescription="@string/asu_logo" />
</RelativeLayout>